# drive-qual-automation

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  MACOS_IMPLEMENTATION_PLAN.md  MACOS_PHASE6_BLACKMAGIC_DECISION.md  POWER_MEASUREMENTS_LOG_ISSUES.md  README.md  TEST_PLAN.md  __main__.py  benchmark.py  digi.py  drive_qual.toml  linux_fio.py  post_process_measurements.py  pyproject.toml  setup_directories.py  tektronix.py  tektronix_reports.py  test_tek_transfer.py  usb_tool.py  win_diskspd.py  win_fio.py  windows_benchmark.py  windows_scope_captures.py  windows_usb.py
scripts/: phase2_usb_audit.py  phase3_tektronix_audit.py  watlow_smoke.py
scripts/dev/macos_ui/: run_blackmagic_benchmark.py
scripts/dev/windows_ui/: inspect_atto.py  inspect_cdi.py  inspect_cdm.py
scripts/legacy/windows_benchmarks/: win_diskspd.py  win_fio.py
src/drive_qual/: __init__.py  __main__.py  apricorn_usb_cli.py  benchmark.py  drive_info_prompt.py  equipment_prompt.py  inspect_atto.py  inspect_cdi.py  inspect_cdm.py  power_measurements.py  power_measurements_step.py  report_session.py  report_workflow.py  software_step.py  tektronix.py  usb_tool.py  watlow.py  win_diskspd.py  win_fio.py
src/drive_qual/benchmarks/: __init__.py  common.py  diskspd.py  fio.py
src/drive_qual/cli/: legacy.py  report.py
src/drive_qual/core/: __init__.py  config.py  dut_selection.py  io_utils.py  native_disk_ops.py  power_measurements.py  report_session.py  storage_paths.py
src/drive_qual/integrations/: __init__.py
src/drive_qual/integrations/apricorn/: __init__.py  usb_cli.py
src/drive_qual/integrations/instruments/: __init__.py  tektronix.py  watlow.py
src/drive_qual/workflows/: drive_info.py  equipment.py  orchestrator.py  report.py  setup_directories.py
src/drive_qual_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: drive_qualification_report_atomic_tests.json  test_apricorn_usb_cli.py  test_benchmark_paths.py  test_config.py  test_fio.py  test_macos_blackmagic.py  test_native_disk_ops.py  test_performance_step.py  test_power_measurements_paths.py  test_power_measurements_step.py  test_report_workflow.py  test_workflow_metadata_reuse.py  test_workflow_orchestrator.py
tools/: disk_ops.py  fio-macOS  safe_eject.ps1
tools/linux/: disks-benchmark-like.c  disks-benchmark-like.py  disks-benchmark-like.sh
win-usb-tool/: README.md  setup.py
win-usb-tool/windows_usb/: __init__.py  windows_usb.py
