[project]
name = "drive-qual-automation"
version = "0.2.1"
description = "An end-to-end storage qualification suite"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "pyyaml",
    "pymodbus",
    "pywinauto>=0.6.9; sys_platform == 'win32'",
    "pillow>=12.1.1",
]

[project.scripts]
drive-qual = "drive_qual.cli.legacy:main"
drive-qual-report = "drive_qual.cli.report:run_report_workflow_cli"

[tool.uv]
package = true

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "pre-commit",
    "types-requests",
    "types-PyYAML",
]

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.2",
    "pre-commit>=3.7.0",
    "types-requests",
    "types-PyYAML",
    "types-pillow>=10.2.0.20240822",
]

[tool.ruff]
src = ["src"]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Start from a known baseline; adjust based on your existing config.
select = [
  "E", "F",          # pycodestyle + pyflakes
  "B",              # bugbear
  "I",              # import sorting
  "UP",             # pyupgrade
  "SIM",            # simplify
  "PLR",            # pylint refactor rules (god-function controls live here)
]

[tool.ruff.lint.pylint]
max-statements = 30
max-branches = 10
max-locals = 12
max-nested-blocks = 4
max-args = 6
max-positional-args = 4
max-bool-expr = 4


[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["src"]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src"
testpaths = [
    "tests",
]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
